FIX align center error

--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ header .hero .right .deco.bis {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  text-align: center;
 }
 
 .error.screen {
